# Fluently

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Makefile  Makefile.new  README.md  docker-compose-local.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  restore_database.sh  sonar-project.properties
.github/workflows/: deploy.yml  platform-testing.yml
Fluently/Fluently/: ContentView.swift  FluentlyApp.swift  Persistence.swift
Fluently/Fluently.xcodeproj/: project.pbxproj
Fluently/FluentlyTests/: FluentlyTests.swift
analysis/: .gitignore  Words.ipynb  oxford_vocabulary.csv
analysis/distractor_api/: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py
analysis/distractor_api/api/: routes.py
analysis/distractor_api/models/: schemas.py
analysis/distractor_api/services/: distractor_service.py
analysis/llms/: api.py  (+7 more)
android-app/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
backend/: .air.toml  .env.example  .gitignore  Dockerfile  MIGRATION_README.md  README.md  SWAGGER_AUTH_README.md  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  init.sql  manage-monitoring.sh  migration_fix.sql  run_migration.sh
cmd/: main.go
config/: config.go
docs/: CI_CD_Platform_Improvements.md  CI_CD_Reference_Guide.md  Cloudflare_SSL_Setup.md  Deployment_Setup.md  Infrastructure_Services_EN.md  Infrastructure_Services_RU.md  Install_Full.md  Install_Local.md  Platform_Support.md  Quick_Reference_Card.md  SonarCloud_Setup.md  Team_Onboarding_Guide.md  Team_Onboarding_Guide_RU.md  lesson.json  swagger.json
frontend-website/: 404.html  Dockerfile  README_AUTH.md  auth-success.html  index.html  nginx.conf  profile.html  profile.js  script.js  style.css  terms.html
ios-app/: README.md
scripts/: backup_ops.sh.template  backup_volumes.sh  backup_volumes.sh.template  deploy-nginx-with-bot.sh  migrate_to_external_volumes.sh.template  restore_volumes.sh.template  setup_cron.sh.template  validate-pipeline.sh
swagger/: Dockerfile  nginx.conf
telegram-bot/: .air.toml  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
web-extension/: DEBUG_GUIDE.md  README.md  background.js  content.js  debug.html  debug.js  manifest.json  popup.html  popup.js
(+2206 files in other folders)
